--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   max-width: 1024px;
   height: 90vh;
   margin: 20px auto;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -15,11 +16,16 @@ h1 {
 .comments {
   height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: flex-end;
   overflow: auto;
 }
 p {
-  margin: 0;
+  margin: 5px 0;
   padding: 10px;
+  background-color: #e5fff6;
+  border-radius: 10px;
 }
 p.red {
   background-color: #ff00001f;
