--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,8 @@ h1 {
   height: 100%;
   width: 100%;
   display: flex;
-  flex-direction: column-reverse;
-  justify-content: flex-end;
+  flex-direction: column;
+  justify-content: flex-start;
   overflow: auto;
 }
 p {
